uredjivanje gui za driver screen

--- a/src/main/resources/fxml/DriverScreen.fxml
+++ b/src/main/resources/fxml/DriverScreen.fxml
@@ -28,14 +28,13 @@
       </TableView>
       <Button layoutX="269.0" layoutY="105.0" mnemonicParsing="false" onAction="#showAllDrivers" text="Show all" />
       <Button layoutX="376.0" layoutY="105.0" mnemonicParsing="false" onAction="#sortByAge" text="Sort by age" />
-      <ToolBar layoutX="118.0" layoutY="14.0" prefHeight="40.0" prefWidth="302.0">
+      <ToolBar layoutX="196.0" layoutY="14.0" prefHeight="40.0" prefWidth="219.0">
         <items>
-          <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="50.0" text="Home" onAction="#goHome"/>
-            <Button mnemonicParsing="false" prefWidth="80.0" text="Edit Driver" onAction="#editDriver"/>
-            <Button mnemonicParsing="false" text="Create Driver" onAction="#createDriver"/>
-            <Button mnemonicParsing="false" text="Close All" onAction="#closeAll"/>
+          <Button mnemonicParsing="false" onAction="#goHome" prefHeight="26.0" prefWidth="50.0" text="Home" />
+            <Button mnemonicParsing="false" onAction="#createDriver" text="Create Driver" />
+            <Button mnemonicParsing="false" onAction="#closeAll" text="Close All" />
         </items>
       </ToolBar>
-      <Button layoutX="377.0" layoutY="155.0" mnemonicParsing="false" text="Delete Driver" onAction="#deleteDriver" />
+      <Button layoutX="377.0" layoutY="155.0" mnemonicParsing="false" onAction="#deleteDriver" text="Delete Driver" />
    </children>
 </Pane>
