--- a/src/main/resources/fxml/TrackFansPage.fxml
+++ b/src/main/resources/fxml/TrackFansPage.fxml
@@ -12,7 +12,7 @@
             <Insets />
          </opaqueInsets>
       </DialogPane>
-      <Button layoutX="348.0" layoutY="119.0" mnemonicParsing="false" onAction="#searchDrivers" text="Button" />
+      <Button layoutX="348.0" layoutY="119.0" mnemonicParsing="false" onAction="#searchDrivers" text="Search" />
       <ChoiceBox fx:id="choiceBox" layoutX="156.0" layoutY="119.0" prefWidth="150.0" />
    </children>
 </Pane>
